--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -85,7 +85,7 @@
         animation-name: navExpand;
         animation-duration: .2s;
         animation-fill-mode: forwards;
-        z-index: 2000;
+        z-index: 2100;
 
         ul {
           flex-direction: column;
