--- a/src/components/Jobs.scss
+++ b/src/components/Jobs.scss
@@ -130,7 +130,7 @@
   transition: opacity 0.4s ease-in-out;
   height: 300px;
   @media (max-width: 500px) {
-    height: 600px;
+    height: 400px;
   }
   h3 {
     font-size: 24px;
